--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>IoT Hub</title>
     </head>
-    <body class="bg-slate-800 w-full h-full text-gray-100">
+    <body class="bg-slate-800 w-full h-full text-slate-100">
         <div id="app"></div>
         <script type="module" src="/src/main.js"></script>
     </body>
